# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Explicit Versioning](https://github.com/exadra37-versioning/explicit-versioning).

## [Unreleased]
### Added
- nast.gust.Turb now allows the user to specify their own velocity PSDF in a random turbulence analysis. 
### Changed
### Deprecated
### Removed
### Fixed


## [0.2.x.x]
### Added
### Changed
- [0.2.0.0] increased speed of atmos call and added atmosT for fast temperature estimate
### Deprecated
### Removed
### Fixed
- [0.2.0.0] Updated baff building to baff 0.2.x where stations are handled differently


## [0.1.x.x]
### Added
- [0.1.0.1] added user preference for Nastran exe
- [0.1.0.2] removed user pref for Nastran Ver as it causes issues on some machines
- [0.1.0.3] Added warning if using "...w.exe" as this doesnt block execution
= [0.1.0.4] upodated sol101 to to a ocnstraint elemnt at CoM not a Point Element
- [0.1.0.4] mass elements nolong generate coordsys if they have no children
- [0.1.0.4] can disable the printing of aero parts.
- [0.1.0.5] option to not print coord sys for all points and point masses
- [0.1.0.5] option to attach chcildren to closest node in x direction rather than gloablly
- [0.1.0.5] constraints can now print support card for unsupport DoFs
- [0.1.0.8] added divergence solution type
- [0.1.0.11] added ability to selectively not build aero panels for each wing element.
        - sped up atmos function
        - tweeked 1MC to match CS-25
        - add methods to get global coordinates of the beam coordinates 
- [0.1.0.14] added ability to spline control surfaces seperately by
        - setting baffopt 'SeperateSplineForControlSurfaces' TRUE
        - making the control surface a rigid body
        - spline the control surface to points on this rigi body
- [0.1.0.16] added concept of inertia for added aero mass