@@ -87,7 +87,7 @@ for i = 1:(stMass.N-1)
         [~,idx] = min(abs(Etas-stEta));
         fe.RigidBars(end+1) = ads.fe.RigidBar(fe.Points(idx),fe.Points(end));
         % add mass at the point
-        fe.Masses(end+1) = ads.fe.Mass(st.LinearDensity.*dL,fe.Points(end),...
+        fe.Masses(end+1) = ads.fe.Mass(sti.LinearDensity.*dL,fe.Points(end),...
         Ixx=sti.LinearInertia(1,1)*dL,Iyy=sti.LinearInertia(2,2)*dL,Izz=sti.LinearInertia(3,3)*dL,...
         Ixy=sti.LinearInertia(1,2)*dL,Ixz=sti.LinearInertia(1,3)*dL,Iyz=sti.LinearInertia(2,3)*dL);
     end
