@@ -7,9 +7,8 @@ arguments
     opts.NumAttempts = 1;
     opts.BinFolder string = '';
     opts.TruelySilent = false;
-
-    % EDW: add option to create a batch file
     opts.createBat = false;
+    opts.cmdLineArgs struct = struct.empty;
 end
 
 %% create BDFs
@@ -62,11 +61,8 @@ while attempt<opts.NumAttempts+1
         fprintf('Computing sol146 for Model %s: %.0f gusts ... ',...
             obj.Name,length(obj.Gusts));
     end
-    command = [ads.nast.getExe,' ','sol146.bdf',...
-        ' ',sprintf('out=..%s%s%s',filesep,'bin',filesep)];
-    if opts.Silent || opts.TruelySilent
-        command = [command,' ','1>NUL 2>NUL'];
-    end
+    command = ads.nast.buildCommand('sol146.bdf',...
+        cmdLineArgs=opts.cmdLineArgs,Silent=(opts.Silent || opts.TruelySilent));
     if opts.TruelySilent
         system(command);
     else
